[gd_scene load_steps=10 format=3 uid="uid://c3yk8v5k9q8y4"]

[ext_resource type="Script" path="res://scripts/pawnshop.gd" id="1_pawnshop"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/bg_pawnshop.png" id="2_bg"]
[ext_resource type="Theme" path="res://resources/theme_neowiz.tres" id="3_theme"]
[ext_resource type="Texture2D" path="res://assets/effects/memory_orb.png" id="4_orb"]
[ext_resource type="Texture2D" path="res://assets/effects/memory_orb_cyan.png" id="5_orb_cyan"]
[ext_resource type="Texture2D" path="res://assets/ui/icon_mercy.png" id="6_icon_mercy"]
[ext_resource type="Texture2D" path="res://assets/ui/icon_justice.png" id="7_icon_justice"]
[ext_resource type="Texture2D" path="res://assets/ui/icon_profit.png" id="8_icon_profit"]
[ext_resource type="Texture2D" path="res://assets/ui/icon_memory.png" id="9_icon_memory"]

[node name="Pawnshop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_pawnshop")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="ShopInterior" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NeonSign" type="Label" parent="ShopInterior"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.02
anchor_right = 0.65
anchor_bottom = 0.08
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.65, 0.55, 0.98, 1)
theme_override_colors/font_shadow_color = Color(0.65, 0.55, 0.98, 0.5)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 42
text = "Í∏∞ÏñµÏùò Ï†ÑÎãπÌè¨"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrbDisplay1" type="TextureRect" parent="ShopInterior"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.15
anchor_right = 0.13
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_orb")
expand_mode = 1
stretch_mode = 5

[node name="OrbDisplay2" type="TextureRect" parent="ShopInterior"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.18
anchor_right = 0.20
anchor_bottom = 0.28
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_orb_cyan")
expand_mode = 1
stretch_mode = 5

[node name="OrbDisplay3" type="TextureRect" parent="ShopInterior"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.10
anchor_top = 0.30
anchor_right = 0.15
anchor_bottom = 0.40
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_orb")
expand_mode = 1
stretch_mode = 5

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 0.06
offset_left = 20.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 28
text = "Day 1"

[node name="ReputationPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="UI/ReputationPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UI/ReputationPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.55, 0.98, 1)
theme_override_font_sizes/font_size = 20
text = "ÌèâÌåê"
horizontal_alignment = 1

[node name="MercyBar" type="HBoxContainer" parent="UI/ReputationPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="UI/ReputationPanel/VBox/MercyBar"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_icon_mercy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/ReputationPanel/VBox/MercyBar"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "ÏûêÎπÑ"

[node name="ProgressBar" type="ProgressBar" parent="UI/ReputationPanel/VBox/MercyBar"]
custom_minimum_size = Vector2(130, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="JusticeBar" type="HBoxContainer" parent="UI/ReputationPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="UI/ReputationPanel/VBox/JusticeBar"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("7_icon_justice")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/ReputationPanel/VBox/JusticeBar"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Ï†ïÏùò"

[node name="ProgressBar" type="ProgressBar" parent="UI/ReputationPanel/VBox/JusticeBar"]
custom_minimum_size = Vector2(130, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="ProfitBar" type="HBoxContainer" parent="UI/ReputationPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="UI/ReputationPanel/VBox/ProfitBar"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("8_icon_profit")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="UI/ReputationPanel/VBox/ProfitBar"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Ïù¥Ïùµ"

[node name="ProgressBar" type="ProgressBar" parent="UI/ReputationPanel/VBox/ProfitBar"]
custom_minimum_size = Vector2(130, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="CustomerArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.15
anchor_right = 0.7
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2

[node name="CustomerPortrait" type="TextureRect" parent="CustomerArea"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.78
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="BottomPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StatusLabel" type="Label" parent="BottomPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ï†ÑÎãπÌè¨ Î¨∏ÏùÑ Ïó¥ÏóàÏäµÎãàÎã§. ÏÜêÎãòÏùÑ Í∏∞Îã§Î¶¨Îäî Ï§ë..."
horizontal_alignment = 1

[node name="WaitButton" type="Button" parent="BottomPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "ÏÜêÎãò ÎßûÏù¥ÌïòÍ∏∞"

[node name="NextDayButton" type="Button" parent="BottomPanel/MarginContainer/VBox"]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Îã§Ïùå ÎÇ†Î°ú"

[node name="NewsTicker" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.72
anchor_right = 1.0
anchor_bottom = 0.77
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NewsTicker"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="NewsTicker/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NewsIcon" type="Label" parent="NewsTicker/MarginContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "üì∫ NEWS"

[node name="NewsLabel" type="Label" parent="NewsTicker/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 0.9)
theme_override_font_sizes/font_size = 18
text = "ÎÑ§Ïò§ÏãúÌã∞ Í∏∞Ïñµ Í±∞ÎûòÏÜå - Ïò§ÎäòÏùò Îâ¥Ïä§Î•º Î∂àÎü¨Ïò§Îäî Ï§ë..."
text_overrun_behavior = 3

[node name="QueueIndicator" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82
anchor_top = 0.15
anchor_right = 0.98
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 2

[node name="QueueLabel" type="Label" parent="UI/QueueIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.55, 0.98, 0.8)
theme_override_font_sizes/font_size = 16
text = "ÎåÄÍ∏∞ ÏÜêÎãò:"
vertical_alignment = 1

[node name="QueueCount" type="Label" parent="UI/QueueIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 24
text = "0"
vertical_alignment = 1
